# fyta_plants_checker

./: .gitignore  README.md  check_plants.py  config.py  data_check.py  gen_message.py  immutables.py  logs.py  main.py  notify.py  pyproject.toml
