[tool.poetry]
name = "fyta-plants-checker"
version = "0.1.0"
description = ""
authors = ["Edgar Gonçalves <edgar.g.goncalves@gmail.com>"]
readme = "README.md"
packages = [{include = "fyta_plants_checker"}]

[tool.poetry.dependencies]
python = "^3.11"
google-auth-oauthlib = "^0.8.0"
google = "^3.0.0"
google-api-python-client = "^2.72.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
