[tool.poetry]
name = "fyta-plants-checker"
version = "0.1.0"
description = ""
authors = ["Edgar Gonçalves <edgar.g.goncalves@gmail.com>"]
readme = "README.md"
packages = [{include = "fyta_plants_checker"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
